# estagio-todo

server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
server/core/: models.py  serializers.py  urls.py  utils.py  views.py
server/core/migrations/: 0001_initial.py
server/server/: settings.py  urls.py
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/components/: Button.tsx  DeleteTaskModal.tsx  Dialog.tsx  EditTaskModal.tsx  Input.tsx  NewTaskModal.tsx  Toast.tsx  Todo.tsx
web/src/services/: api.ts
